# Chess-Evaluator

./: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt
board_detection/: __init__.py  board.py  detect.py
display/: __init__.py  window_capture.py
model_chess_training/: check_chess_detection.py  check_dataset.py  chess_pieces_dataset.py  config.py  train_chess_detection.py  train_utils.py
model_chess_training/detection/: __init__.py
tests/board_detection/: test_board.py  test_detect.py
