[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Chess-Evaluator"
version = "1.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "./"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%H:%M:%S"